Complete the processor for SELECT, UPDATE, DELETE and INSERT